--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_USER=JUANROSA
+DB_USER=riven
 DB_PASSWORD=admin
-DB_SERVER=DESKTOP-I1LE757
+DB_SERVER=DESKTOP-8I7EO41
 DB_NAME=Testing
 
 # Email settings
