Some important changes to shopping car

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DB_SERVER=DESKTOP-8I7EO41
 DB_NAME=Testing
 
 # Email settings
-EMAIL_USER = appbiblo@gmail.com
-EMAIL_PASSWORD = apxtztxwnortfpwm
+EMAIL_USER = andelsonlopez13@gmail.com
+EMAIL_PASSWORD = fhjfahvxzmpefckg
